--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.2",
     "react-router-dom": "6",
     "react-toastify": "^8.2.0",
     "yup": "^0.32.11"
